--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,25 @@ cmake_minimum_required(VERSION 3.11)
 
 include(FetchContent)
 
-project(MapGenerator)
+project(MapGenerator LANGUAGES CXX)
 
+set(BUILD_SHARED_LIBS OFF)
 set(CMAKE_CXX_STANDARD 11)
 
+# GLM
+message("Fetching GLM...")
+set(GLM_VERSION "0.9.9.8")
+FetchContent_Declare(
+    glm
+    GIT_REPOSITORY https://github.com/g-truc/glm.git
+    GIT_TAG "${GLM_VERSION}"
+)
+FetchContent_MakeAvailable(glm)
+
 # SFML
-set(SFML_BUILD_AUDIO FALSE)
-set(SFML_BUILD_NETWORK FALSE)
+message("Fetching SFML...")
+set(SFML_BUILD_AUDIO OFF)
+set(SFML_BUILD_NETWORK OFF)
 set(SFML_VERSION "2.5.1")
 FetchContent_Declare(
     sfml
@@ -17,14 +29,25 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(sfml)
 
-# GLM
-set(GLM_VERSION "0.9.9.8")
+# ImGui
+message("Fetching ImGui...")
 FetchContent_Declare(
-    glm
-    GIT_REPOSITORY https://github.com/g-truc/glm.git
-    GIT_TAG "${GLM_VERSION}"
+    imgui
+    GIT_REPOSITORY https://github.com/ocornut/imgui
+    GIT_TAG 35b1148efb839381b84de9290d9caf0b66ad7d03
 )
-FetchContent_MakeAvailable(glm)
+FetchContent_MakeAvailable(imgui)
+
+message("Fetching ImGui-SFML...")
+FetchContent_Declare(
+    imgui-sfml
+    GIT_REPOSITORY https://github.com/eliasdaler/imgui-sfml
+    GIT_TAG 82dc2033e51b8323857c3ae1cf1f458b3a933c35
+)
+set(IMGUI_DIR ${imgui_SOURCE_DIR})
+set(IMGUI_SFML_FIND_SFML OFF)
+set(IMGUI_SFML_IMGUI_DEMO ON)
+FetchContent_MakeAvailable(imgui-sfml)
 
 # mapgen
 add_subdirectory(src)
