--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,4 +12,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx -mavx2 -mfma")
 
 add_executable(mapgen ${MAPGEN_HEADERS} ${MAPGEN_SOURCES})
 add_dependencies(mapgen glm)
-target_link_libraries(mapgen ImGui-SFML::ImGui-SFML)
+target_link_libraries(mapgen ImGui-SFML::ImGui-SFML GLEW)
