--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,3 +13,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx -mavx2 -mfma")
 add_executable(mapgen ${MAPGEN_HEADERS} ${MAPGEN_SOURCES})
 add_dependencies(mapgen glm)
 target_link_libraries(mapgen PRIVATE glfw GLEW GL imgui)
+target_compile_features(mapgen PRIVATE cxx_std_17)
