--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ file(GLOB_RECURSE MAPGEN_SOURCES "*.cpp")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
+# TODO: Generate a header dynamically from discovered operators
 if(CMAKE_COMPILER_IS_GNUCXX)
     message(STATUS "GCC detected, adding compile flags")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra")
