--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ target_sources(imgui
     ${imgui_SOURCE_DIR}/imgui_tables.cpp
     ${imgui_SOURCE_DIR}/imgui_widgets.cpp
     ${imgui_SOURCE_DIR}/imgui.cpp
+    ${imgui_SOURCE_DIR}/misc/cpp/imgui_stdlib.cpp
 
     PRIVATE
     ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
@@ -73,6 +74,8 @@ target_sources(imgui
 target_include_directories(imgui
     PUBLIC ${imgui_SOURCE_DIR}
     PUBLIC ${imgui_SOURCE_DIR}/backends
+
+    # PUBLIC ${imgui_SOURCE_DIR}/misc/cpp  # For some reason this isn't being used
     PUBLIC ${SDL2_DIR}/include
 )
 target_link_libraries(imgui GL)
